# omniscio

./: CMakeLists.txt  README.md
include/: omniscio.h
lib/: CMakeLists.txt
src/: dictionary.hpp  files.cpp  files.hpp  log.hpp  matrix.hpp  model.hpp  mpi.cpp  offsets.hpp  omniscio.cpp  posix.cpp  posix.h  sizes.hpp  trace.cpp  trace.hpp  tree.hpp  vector.hpp
src/sequitur/: analyzer.cpp  oracle.cpp  oracle.hpp  rules.cpp  rules.hpp  symbols.cpp  symbols.hpp
src/stats/: adaptive_stats.hpp  pareto_stats.hpp  stats.hpp  uniform_stats.hpp
src/unused/: dmap.hpp  extern.hpp  histogram.hpp
test/: CMakeLists.txt  reader.cpp  test.txt  test_tree.cpp
